--- a/src/zfinx.tex
+++ b/src/zfinx.tex
@@ -1,4 +1,4 @@
-\chapter{``Zfinx'', ``Zdinx'', ``Zhinx'', ``Zhinxmin'': Standard Extensions for Floating-Point in Integer Registers, Version 0.41}
+\chapter{``Zfinx'', ``Zdinx'', ``Zhinx'', ``Zhinxmin'': Standard Extensions for Floating-Point in Integer Registers, Version 1.0.0-rc}
 \label{sec:zfinx}
 
 This chapter defines the ``Zfinx'' extension (pronounced ``z-f-in-x'')
